fix unhookitizing, add gap to flex

--- a/airbyte-webapp/src/views/layout/SideBar/components/MenuContent.module.scss
+++ b/airbyte-webapp/src/views/layout/SideBar/components/MenuContent.module.scss
@@ -1,3 +1,5 @@
+@use "scss/variables";
+
 .menuContent {
   height: 100%;
   padding: 0;
@@ -5,5 +7,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: variables.$spacing-xs;
   align-items: center;
 }
